@@ -4,16 +4,14 @@ Hash: SHA256
 DIST dalli-2.6.4.gem 40448 SHA256 04fde96890b41a4b4c71bdcdddbf8522d7685bd3b57d4632ef2f4a04c481cbc1 SHA512 ce734e1d122a9b20c567497ff88dbbf5ddb03912e88ae70199746808695c139062a25797c34b82a203139568f44791dd09a91eff9b4816d26ce50f6e74cef860 WHIRLPOOL 3a30d3ddcdfc976a42a9d0feb1b8beaa39c5b45179127a01e1493899dc68c18cb79f06e57ad32c8b03dccec6c82652b218b4691567530954af0e77fab2ffa5ea
 DIST dalli-2.7.4.gem 47616 SHA256 acdf155946cda8eb55edb9af7c44888dc8b726930f157729ffa67f5bc2fc8a7b SHA512 2bd1efeb245177f15feb02fdf40ef1d2bf0cb820a2a881ef810b3d30aa837ad53dc755c5ce8b95de689c27ec83d93e85501d9b5b1e57c8bf0c6eeff8bd42a78f WHIRLPOOL 7866f0500ad2c28d8cae0a8802376474ccc31696d4e5871b1802fdcd6b4f49fdf822bf789458962e7b17a2d05ff3a114d6a8de15919efc6f218ff55a56f0a002
 EBUILD dalli-2.6.4.ebuild 1192 SHA256 808f92c6d28e6a41a40507336e47805c789a554cef3f1cd5e4626d28371c91bb SHA512 b06253b67a8b57920e82bc156a937b72a6ba04813e76b2db5a7313b1df618afd7ceb47ee26393a8945b91faf44b49137737b058062b9d0097d4d1e708bb531a3 WHIRLPOOL 897059d19a8067441ce25467751f7ee9f86b42097418f79322d43941096f36984de71605b2214a4515ab605a1dbaf3f2884656abb69a80e52a424b5fab956e4b
-EBUILD dalli-2.7.4-r1.ebuild 1225 SHA256 8952480c91e8454c33e920560170c80d432b16ba393cd7f5f70741f730288270 SHA512 e88ee4566737f691a57cb87ca7a7f811253b7c76768f0b077198218c5239a56cb29acf39228427ed2c4cc9a8db445781a22be74d37aa5d2209d3493c169916a6 WHIRLPOOL 82fafa308810356e2cff473e6a9c9027e6c98ebe1aafdad55974c2d95bedecb6ed41c0a01b3b9c1afc7d3b343f3a858b0be44e0d20bb64c9f22d810312c295c8
+EBUILD dalli-2.7.4-r1.ebuild 1240 SHA256 2ff5cfa0ef3bdd29e0d30638bb9faf0ddcd86ab376e35e84d1c57ddf67841181 SHA512 fe78080f0421fa9ec96f48f73d5e5271d4e37c668db3c7ff5af47d1192993803331a6791a52287a6f76ae11fb886233388b06584b37238cba2a42d62193764ea WHIRLPOOL 6a9059d0699261dd51bcb29127302eb08bfacdfca35caa0548ea8a07fae0421ba1a450ce02e8a6caf60ffb2e94f44563307f5626b879aca716fb2bfded1eb07e
 EBUILD dalli-2.7.4.ebuild 1211 SHA256 341ef5b4983bd706fc6266ca5d2bd77621a81e045788163fad6e74e05f2b4064 SHA512 066a22564547c2626de2f88a6bdac9017f05e925d8f45f71753ef13ba056cdd7ea46b4c1101cd194e2aee152242f02afa1d0c45840b996780bec02201b65a6a8 WHIRLPOOL eb013c2102c5dec140c0b39e6aad7697af59255920ebbefeac477bd270a5b544725089f6b8a2e55c4735f57724ec8147e5bf03c301c960301dc2a34cf121c76f
-MISC ChangeLog 2295 SHA256 2f4c74e837ea67c351a78764d8cc173e4356f380cf59d2c22486ad32a9079835 SHA512 701132049bb8ddb15d67e176a9cd04f7f8ca5aab70d447397283f7de5508639902b58ba9f61d59441c653e00c6cb56e85f6b6294b76dff83f23243e2acb41deb WHIRLPOOL c89875ed5543e48fc024432377a58bb413b4091e57c96c9c99544d362e88cc8dec599e80f9dd59bda7314ed038422bb193298d36f66366568d8d136f12906689
+MISC ChangeLog 2413 SHA256 0a332a5a22e92f214b5a76b1dedf9f899ffbb6115d4ab420a8a007e50e725bb6 SHA512 2b29ef45577c65f094880bc61411474bf48241aca9aa9a543fc9426cd974f75077795305628581787fac86ed8a676f47afa9d9ac6aa7602f4dad2d02f8a0207b WHIRLPOOL 004ce100c968b56f4816958bd91b95c9c11a978023b136f7a746c33daff1c79351042d555e7e393e06f527300ec3d9a6e4975f0af496c87b44f507da45216e10
 MISC metadata.xml 241 SHA256 ab85c2c97a54f230b90a5342e4e07aa051b5a53e808dc190295137c532dff60d SHA512 a74ec145bf6d447f85ba8963cad7119b7eff8de20bf8b762881342496fa06ba3e9f8f2751b0f93ec27a5d1bb6c35159007c78124f6692084c72c27de720e25b1 WHIRLPOOL 06bfdf04a83ba7a5736f7c5f009de91eb2d7e917dfebeb76a5fc5b523629784581a31ffcc665cbe8599f55233bfd48c7f5f4362c5f276edda77f8d41dafd63d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlWhesYACgkQG9wOWsQutdYSagQA1s6q9NNHmZih78L6pmqEj9Lr
-j1fTwSYbPjmMYUcD6SkQycG3ObUmgouXw/ejCO72z1lxKv6/eyv5hNQo7aUVH6Pz
-5/2+knbQZn4fl+OKj2wl3oK7WrGNGDpC6vfTkWcrru4knMIfbuVrhSRczItctd4h
-ZN2OK+imH3aYfUVB+CU=
-=f2mB
+iF4EAREIAAYFAlXFsMEACgkQiIP6VqMIqNdeuQEAl3DLnvpzAjF2nCPR7bG158Sc
+DWKhra2k1o8wCpTsNqcA/01UHZ9nsIAD6DxO5JGmIQdBrlTEflN1V7FSnCMuRin6
+=u1zE
 -----END PGP SIGNATURE-----
