@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( >=net-misc/memcached-1.4.0 ) ruby_targets_ruby19? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby19] >=dev-ruby/mocha-0.13[ruby_targets_ruby19] >=dev-ruby/activesupport-4.1[ruby_targets_ruby19] dev-ruby/connection_pool[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby20] >=dev-ruby/mocha-0.13[ruby_targets_ruby20] >=dev-ruby/activesupport-4.1[ruby_targets_ruby20] dev-ruby/connection_pool[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby21] >=dev-ruby/mocha-0.13[ruby_targets_ruby21] >=dev-ruby/activesupport-4.1[ruby_targets_ruby21] dev-ruby/connection_pool[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=test? ( >=net-misc/memcached-1.4.0 ) ruby_targets_ruby19? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby19] >=dev-ruby/mocha-0.13[ruby_targets_ruby19] dev-ruby/rack[ruby_targets_ruby19] >=dev-ruby/activesupport-4.1[ruby_targets_ruby19] dev-ruby/connection_pool[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby20] >=dev-ruby/mocha-0.13[ruby_targets_ruby20] dev-ruby/rack[ruby_targets_ruby20] >=dev-ruby/activesupport-4.1[ruby_targets_ruby20] dev-ruby/connection_pool[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/minitest:5[ruby_targets_ruby21] >=dev-ruby/mocha-0.13[ruby_targets_ruby21] dev-ruby/rack[ruby_targets_ruby21] >=dev-ruby/activesupport-4.1[ruby_targets_ruby21] dev-ruby/connection_pool[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
 DESCRIPTION=A high performance pure Ruby client for accessing memcached servers
 EAPI=5
 HOMEPAGE=https://github.com/mperham/dalli
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
 SLOT=0
 SRC_URI=mirror://rubygems/dalli-2.7.4.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	ruby-fakegem	59aa129a3b9dc9e6225a0622860d2f54	ruby-ng	a1c75617b3482d513ad41d1aea8dbf8f	ruby-utils	a74e21a353442acf697b6c82e7df6df8	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=442bd7b16d6bbb4866b1e8e81722df05
+_md5_=4b3d9158794f8d2d201aa797b2fd9166
